re order cmake and folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
-project(MyOpenCVApp)  # Use a more descriptive name
+project(Navigation)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Optional: Make OpenCV_DIR overrideable from command line
-if(NOT OpenCV_DIR)
-    set(OpenCV_DIR "C:/opencv/build")
+if(NOT DEFINED OpenCV_DIR)
+    set(OpenCV_DIR "C:/opencv/install")
 endif()
 
 find_package(OpenCV REQUIRED)
 
-add_executable(${PROJECT_NAME} 
+add_executable(${PROJECT_NAME}
     navigation.cpp
-    )
-target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS})
+)
+
 target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS})
