--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(OpenCV REQUIRED)
 
 add_executable(${PROJECT_NAME}
     main.cpp
+    # scratch.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
